--- a/index.html
+++ b/index.html
@@ -22,6 +22,9 @@
           var decoded = l.search.slice(1).split('&').map(function(s) { 
             return s.replace(/~and~/g, '&')
           }).join('?');
+
+          console.log({ decoded })
+
           window.history.replaceState(null, null,
               l.pathname.slice(0, -1) + decoded + l.hash
           );
